# irkit

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  README.md  acchits.cpp  build.sh  conan_ycm_flags.json  conanfile.py  deploy-server.sh  deploy.sh  irkit-config.cmake  run.cpp  server.cpp
benchmarks/: CMakeLists.txt  all.sh  bench_posting_list_view.cpp  bench_queryproc.cpp  bench_taat.cpp  bench_varbyte.cpp  init.sh
cmake/: FindTBB.cmake  Findcppitertools.cmake  Findrax.cmake
doc/html/: _8ycm__extra__conf_8py.html  classbloodhound_1_1Heap-members.html  classbloodhound_1_1PostingList-members.html  classbloodhound_1_1index_1_1Index.html  classbloodhound_1_1query_1_1ApproxSaatRetriever-members.html  classbloodhound_1_1query_1_1ApproxSaatRetriever.html  classbloodhound_1_1query_1_1DaatRetriever-members.html  classbloodhound_1_1query_1_1DaatRetriever.html  classbloodhound_1_1query_1_1ExactSaatRetriever.html  classbloodhound_1_1query_1_1Retriever.html  classbloodhound_1_1query_1_1WandRetriever.html  classngine_1_1PostingList-members.html  classngine_1_1PostingList.html  classngine_1_1index_1_1Index-members.html  classngine_1_1index_1_1Index.html  classngine_1_1query_1_1MaxScoreProcessor-members.html  classngine_1_1query_1_1TaatProcessor-members.html  classngine_1_1query_1_1TaatRetriever.html  classngine_1_1query_1_1WandProcessor.html  classngine_1_1query_1_1WandRetriever-members.html  classngine_1_1query_1_1WandRetriever.html  files.html  functions.html  functions_func.html  globals_defs.html  heap_8hpp_source.html  hierarchy.html  index.html  namespacemembers_func.html  namespacemembers_type.html  namespacengine_1_1index.html  namespacengine_1_1query.html  namespaces.html  namespacestd.html  ngine_8cpp.html  server_8cpp.html  structbloodhound_1_1Doc-members.html  structbloodhound_1_1Posting-members.html  structbloodhound_1_1PostingList_1_1iterator-members.html  structbloodhound_1_1TermId.html  (+26 more)
doc/latex/: _8ycm__extra__conf_8py.tex  annotated.tex  classbloodhound_1_1PostingList.tex  classbloodhound_1_1query_1_1ApproxSaatRetriever.eps  classbloodhound_1_1query_1_1ApproxSaatRetriever.tex  classbloodhound_1_1query_1_1ExactSaatRetriever.tex  classbloodhound_1_1query_1_1RawTaatRetriever.eps  classbloodhound_1_1query_1_1RawTaatRetriever.tex  classbloodhound_1_1query_1_1WandRetriever.tex  classngine_1_1PostingList.tex  classngine_1_1query_1_1DaatProcessor.eps  classngine_1_1query_1_1MaxScoreProcessor.eps  classngine_1_1query_1_1Retriever.eps  classngine_1_1query_1_1SaatProcessor.tex  classngine_1_1query_1_1TaatProcessor.tex  classngine_1_1query_1_1TaatRetriever.eps  classngine_1_1query_1_1WandProcessor.tex  classngine_1_1query_1_1WandRetriever.eps  classngine_1_1query_1_1WandRetriever.tex  files.tex  heap_8hpp.tex  hierarchy.tex  index_8hpp.tex  namespacengine.tex  namespacengine_1_1query.tex  refman.tex  saat_8hpp.tex  structbloodhound_1_1Doc.eps  structbloodhound_1_1Doc.tex  structbloodhound_1_1Heap_1_1Entry.tex  structbloodhound_1_1Offset.tex  structbloodhound_1_1PostingList_1_1iterator.tex  structbloodhound_1_1Score.eps  structbloodhound_1_1Score.tex  structbloodhound_1_1TermId.eps  structbloodhound_1_1TermId.tex  structbloodhound_1_1TermWeight.tex  structbloodhound_1_1index_1_1PostingListHeader.tex  structbloodhound_1_1query_1_1Result.tex  structbloodhound_1_1query_1_1debug.eps  (+13 more)
docs/: header.html  style.css
docs/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CONTRIBUTING_8md.html  README_8md.html  _8ycm__extra__conf_8py.html  annotated.html  (+975 more)
include/: cmd.hpp  daat.hpp  heap.hpp  index.hpp  query.hpp  retrievers.hpp  run.hpp  saat.hpp  taat.hpp
lib/: CMakeLists.txt
profiles/: exclusions  irkit
scripts/: clang-tidy.sh  count_nonessential.py  dochits.py  remove-submodules.py  results.py  run-tests.sh  run.py  ta.py  times.py  vera.sh  wand.py
src/: CMakeLists.txt  build_index.cpp  cli.hpp  cmd.cpp  index_stats.cpp  irk-buildindex.cpp  irk-compress.cpp  irk-disect.cpp  irk-docidmap.cpp  irk-extract-footprint.cpp  irk-extract-posting-count.cpp  irk-extract-results.cpp  irk-hits.cpp  irk-lexicon.cpp  irk-lookup.cpp  irk-merge.cpp  irk-optet.cpp  irk-part.cpp  irk-partidx.cpp  irk-postings.cpp  irk-prefmap.cpp  irk-query.cpp  irk-queryshards.cpp  irk-reorder.cpp  irk-score.cpp  irk-scorestats.cpp  irk-server.cpp  irk-shardmap.cpp  irk-stem.cpp  irk-table.cpp  irk-taily.cpp  irk-terminfo.cpp  irk-termmap.cpp  irk-threshold.cpp  irk-uncompress.cpp  irk-vector.cpp  irk-warc.cpp  irk.cpp  maxscores.cpp  ngine.cpp  (+5 more)
src/blip/: CMakeLists.txt  maxscores.cpp  termhits.cpp
src/bovw/: CMakeLists.txt  maxscores.cpp  server.cpp  termhits.cpp
submodules/: submodules.cmake
test_package/: CMakeLists.txt  conanfile.py  test.cpp
tests/: CMakeLists.txt  randstr.txt  test_argparser.cpp  test_bitptr.cpp  test_block.cpp  test_builder.cpp  test_coding.cpp  test_daat.cpp  test_heap.cpp  test_immutablebittrie.cpp  test_index.cpp  test_index_integration.cpp  test_index_list.cpp  test_index_reading.cpp  test_io.cpp  test_memoryview.cpp  test_merger.cpp  test_mutablebittrie.cpp  test_posting_ranges.cpp  test_prefixmap.cpp  test_radix_tree.cpp  test_skiplist.cpp  test_taat.cpp  test_views.cpp  test_warc.cpp  ukb_queries
tests/integration/: CMakeLists.txt  collection.txt  integration_test_hutucker.cpp  integration_test_index.cpp  integration_test_prefixmap.cpp  integration_test_radix_tree.cpp  terms.txt
tests/unit/: CMakeLists.txt  common.hpp  doclist.txt  unit_test_algorithm.cpp  unit_test_block_iterator.cpp  unit_test_compact_table.cpp  unit_test_index_properties.cpp  unit_test_index_source.cpp  unit_test_merger.cpp  unit_test_numeric_codec.cpp  unit_test_partition.cpp  unit_test_posting_list.cpp  unit_test_prefix_codec.cpp  unit_test_quantize.cpp  unit_test_query_algorithms.cpp  unit_test_query_engine.cpp  unit_test_reorder.cpp  unit_test_scorestats.cpp  unit_test_standard_block_list.cpp  unit_test_stemmer.cpp  unit_test_threshold.cpp  unit_test_timer.cpp  unit_test_vector_inverted_lists.cpp
(+888 files in other folders)
