function(add_unit_test TEST_NAME)
    set(LONG_NAME "unit_test_${TEST_NAME}")
    add_executable(${LONG_NAME} "${LONG_NAME}.cpp")
    target_link_libraries(${LONG_NAME} irkit GTest::GTest)
    target_compile_features(${LONG_NAME} PRIVATE ${IRKit_CXX_PRIVATE_FEATURES})
    gtest_add_tests(TARGET ${LONG_NAME} TEST_PREFIX "unit.")
endfunction()

function(add_catch2_unit_test TEST_NAME)
    set(LONG_NAME "unit_test_${TEST_NAME}")
    add_executable(${LONG_NAME} "${LONG_NAME}.cpp")
    target_link_libraries(${LONG_NAME} irkit Catch2::Catch2 CONAN_PKG::FakeIt)
    target_compile_features(${LONG_NAME} PRIVATE ${IRKit_CXX_PRIVATE_FEATURES})
    catch_discover_tests(${LONG_NAME})
endfunction()

message(STATUS "${CMAKE_CURRENT_BINARY_DIR}/../../bin/doclist.txt")
configure_file(doclist.txt "../../bin/doclist.txt" COPYONLY)

add_unit_test(algorithm)
add_unit_test(compact_table)
add_unit_test(index_properties)
add_unit_test(numeric_codec)
add_unit_test(partition)
add_unit_test(posting_list)
add_unit_test(stemmer)
add_unit_test(threshold)
add_unit_test(timer)
add_unit_test(quantize)
add_catch2_unit_test(block_iterator)
add_catch2_unit_test(index_source)
add_catch2_unit_test(merger)
add_catch2_unit_test(reorder)
add_catch2_unit_test(scorestats)
add_catch2_unit_test(standard_block_list)
add_catch2_unit_test(query_algorithms)
add_catch2_unit_test(query_engine)
